8267561: Shenandoah: Reference processing not properly setup for outside of cycle degenerated GC

Reviewed-by: rkennke